# openglpress

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/modules/: README
include/: AbstractModelItem.h  AnimationParameters.h  Camera.h  ColouredCubeModel.h  CrushedCylinder.h  CubeModel.h  CubeModelInside.h  CylinderModel.h  ModelBuilder.h  ModelMatrix.h  ModelMatrixBase.h  Piston.h  RenderTarget.h  RenderedObject.h  Scene.h  ShaderProgram.h  Shprogram.h  SimpleCubeModel.h  TexturedCubeModel.h  TexturedCylinderModel.h  Textures.h  VAOWrapper.h  Window.h  camera.h  shprogram.h  texture.h
resources/shaders/: background_wood.frag  crushing.vert  gl_04.frag  gl_simple.frag  gl_simple.vert  light.frag  light.vert  light_source.frag  light_source.vert  metal.frag  object.vert  wood.frag
src/: AbstractModelItem.cpp  AnimationParameters.cpp  Camera.cpp  ColouredCubeModel.cpp  CrushedCylinder.cpp  CubeModel.cpp  CubeModelInside.cpp  CylinderModel.cpp  ModelBuilder.cpp  ModelMatrix.cpp  ModelMatrixBase.cpp  Piston.cpp  RenderTarget.cpp  RenderedObject.cpp  Scene.cpp  ShaderProgram.cpp  Shprogram.cpp  SimpleCubeModel.cpp  TexturedCubeModel.cpp  TexturedCylinderModel.cpp  Textures.cpp  VAOWrapper.cpp  Window.cpp  camera.cpp  main.cpp  shprogram.cpp  texture.cpp  textures.cpp
